# rp-hal

./: .gitignore  APACHE2.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIT  README.md  format.bat  format.sh  memory.x  run_tests.bat  run_tests.sh
.cargo/: config  (+1 more)
boards/adafruit-feather-rp2040/: CHANGELOG.md  Cargo.toml  README.md
boards/adafruit-feather-rp2040/examples/: adafruit_feather_blinky.rs  adafruit_feather_neopixel_rainbow.rs
boards/adafruit-feather-rp2040/src/: lib.rs
boards/adafruit-itsy-bitsy-rp2040/: CHANGELOG.md  Cargo.toml  README.md
boards/adafruit-itsy-bitsy-rp2040/examples/: adafruit_itsy_bitsy_blinky.rs  adafruit_itsy_bitsy_rainbow.rs
boards/adafruit-itsy-bitsy-rp2040/src/: lib.rs
boards/adafruit-kb2040/: CHANGELOG.md  Cargo.toml  README.md
boards/adafruit-kb2040/examples/: adafruit_kb2040_rainbow.rs
boards/adafruit-kb2040/src/: lib.rs
boards/adafruit-macropad/: CHANGELOG.md  Cargo.toml  README.md
boards/adafruit-macropad/examples/: adafruit-macropad_blinky.rs  adafruit-macropad_showcase.rs
boards/adafruit-macropad/src/: lib.rs  macros.rs
boards/adafruit-trinkey-qt2040/: CHANGELOG.md  Cargo.toml  README.md
boards/adafruit-trinkey-qt2040/examples/: adafruit_trinkey_qt2040_rainbow.rs
boards/adafruit-trinkey-qt2040/src/: lib.rs
boards/adafruit_macropad/: Cargo.toml  README.md  memory.x
boards/adafruit_macropad/src/: lib.rs
boards/arduino_nano_connect/: CHANGELOG.md  Cargo.toml  README.md
boards/arduino_nano_connect/examples/: nano_blinky.rs
boards/arduino_nano_connect/src/: lib.rs
boards/feather_rp2040/: Cargo.toml  README.md  memory.x
boards/feather_rp2040/examples/: feather_blinky.rs  feather_neopixel_rainbow.rs
boards/feather_rp2040/src/: lib.rs
boards/itsy-bitsy-rp2040/: CHANGELOG.md  Cargo.toml  README.md
boards/itsy_bitsy_rp2040/: Cargo.toml  README.md
boards/itsy_bitsy_rp2040/examples/: itsy_bitsy_blinky.rs  itsy_bitsy_rainbow.rs
boards/itsy_bitsy_rp2040/src/: lib.rs
boards/pico/: CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x
boards/pico-bsc/: Cargo.toml  README.md
boards/pico/examples/: pico_blinky.rs  pico_countdown_blinky.rs  pico_gpio_in_out.rs  pico_i2c_pio.rs  pico_pwm_blink.rs  pico_rtic.rs  pico_usb_serial.rs  pico_usb_serial_interrupt.rs  pico_usb_twitchy_mouse.rs
boards/pico/src/: lib.rs
boards/pico_explorer/: Cargo.toml  README.md  build.rs  memory.x
boards/pico_explorer/examples/: pico_explorer_showcase.rs
boards/pico_explorer/src/: lib.rs
boards/pico_lipo_16mb/: Cargo.toml  README.md  memory.x
boards/pico_lipo_16mb/examples/: pico_lipo_16mb_blinky.rs
boards/pico_lipo_16mb/src/: lib.rs
boards/pimoroni-pico-explorer/: CHANGELOG.md  Cargo.toml  README.md
boards/pimoroni-pico-explorer/examples/: pimoroni_pico_explorer_showcase.rs
boards/pimoroni-pico-explorer/src/: lib.rs
boards/pimoroni-pico-lipo-16mb/: CHANGELOG.md  Cargo.toml  README.md
boards/pimoroni-pico-lipo-16mb/examples/: pimoroni_pico_lipo_16mb_blinky.rs
boards/pimoroni-pico-lipo-16mb/src/: lib.rs
boards/pimoroni-plasma-2040/: CHANGELOG.md  Cargo.toml  README.md  build.rs
boards/pimoroni-plasma-2040/examples/: pimoroni_plasma_2040_blinky.rs  pimoroni_plasma_2040_ws2812_led.rs
boards/pimoroni-plasma-2040/src/: lib.rs
on-target-tests/: .gitignore  Cargo.toml  NOTICE  README.md  build.rs  memory_rp235x.x  run_tests.bat  run_tests.sh  run_tests_rp235x.sh
on-target-tests/.cargo/: config.toml
on-target-tests/tests/: dma_drop.rs  dma_dyn.rs  dma_m2m_u16.rs  dma_m2m_u32.rs  dma_m2m_u64.rs  dma_m2m_u8.rs  dma_spi_loopback_u16.rs  dma_spi_loopback_u8.rs  gpio.rs  i2c_loopback.rs  i2c_loopback_async.rs  multicore.rs  powman.rs  vreg_change_voltage.rs
rp-binary-info/: Cargo.toml  README.md
rp-binary-info/src/: lib.rs  macros.rs  types.rs
rp-hal/: Cargo.toml
rp-hal-common/: Cargo.toml  README.md
rp-hal-common/src/: dma.rs  lib.rs
rp-hal-examples/: Cargo.toml  memory.x
rp-hal-examples/.cargo/: config.toml
rp-hal/src/: arch.rs  lib.rs  sio.rs
rp2040-hal/: CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x
rp2040-hal-examples/: Cargo.toml  README.md  build.rs  memory.x
rp2040-hal-examples/.cargo/: config.toml
rp2040-hal-macros/: Cargo.toml  README.md
rp2040-hal-macros/src/: lib.rs
rp2040-hal/examples/: adc.rs  adc_fifo.rs  adc_fifo_dma.rs  adc_fifo_irq.rs  adc_fifo_poll.rs  alloc.rs  binary_info_demo.rs  blinky.rs  dht11.rs  dma.rs  dormant_sleep.rs  dyn-i2c.rs  gpio_c_interop.rs  gpio_dyn_pin_array.rs  gpio_in_out.rs  gpio_irq_example.rs  i2c.rs  i2c_async.rs  i2c_async_cancelled.rs  i2c_without_pins.rs  lcd_display.rs  mem_to_mem_dma.rs  multicore_fifo_blink.rs  multicore_percore_data.rs  multicore_polyblink.rs  pio_blink.rs  pio_dma.rs  pio_proc_blink.rs  pio_side_set.rs  pio_synchronized.rs  pwm.rs  pwm_blink.rs  pwm_blink_embedded_hal_1.rs  pwm_irq_input.rs  rom_funcs.rs  rosc_as_system_clock.rs  rtc_irq_example.rs  rtc_sleep_example.rs  spi.rs  spi_dma.rs  (+5 more)
rp2040-hal/src/: adc.rs  arch.rs  asm.S  async_utils.rs  atomic_register_access.rs  critical_section_impl.rs  dma.rs  gpin.rs  gpio.rs  i2c.rs  intrinsics.rs  lib.rs  multicore.rs  pio.rs  pll.rs  prelude.rs  pwm.rs  resets.rs  rom_data.rs  rosc.rs  rp2040.rs  rtc.rs  serial.rs  sio.rs  spi.rs  ssi.rs  time.rs  timer.rs  typelevel.rs  uart.rs  usb.rs  vector_table.rs  vreg.rs  watchdog.rs  xosc.rs
rp2040_examples/: Cargo.toml
rp2040_examples/src/: main.rs
rp235x-hal/: CHANGELOG.md  Cargo.toml  README.md
rp235x-hal-examples/: Cargo.toml  README.md  build.rs  memory.x  riscv_examples.txt  rp235x_riscv.x
rp235x-hal-examples/.cargo/: config.toml
rp235x-hal-macros/: Cargo.toml  LICENSE-MIT  README.md
rp235x-hal-macros/src/: lib.rs
rp235x-hal/src/: adc.rs  arch.rs  async_utils.rs  atomic_register_access.rs  block.rs  critical_section_impl.rs  dcp.rs  hstx.rs  i2c.rs  lib.rs  lposc.rs  multicore.rs  otp.rs  pio.rs  pll.rs  powman.rs  reboot.rs  resets.rs  rom_data.rs  rosc.rs  sio.rs  spi.rs  timer.rs  typelevel.rs  usb.rs  vector_table.rs  vreg.rs  watchdog.rs  xh3irq.rs  xosc.rs
(+238 files in other folders)
