[workspace]
resolver = "2"
members = ["rp2040-hal", "rp2040-hal-macros", "on-target-tests"]
exclude = []

[patch.'https://github.com/rp-rs/rp-hal.git']
rp2040-hal = { path = "./rp2040-hal" }

[patch.crates-io]
rp2040-hal = { path = "./rp2040-hal" }
rp2040-pac = { git = "https://github.com/AkiyukiOkayasu/rp2040-pac/", rev = "7c1181c3165230cc0c54221d7a2f34680fede9c1" }

# Those profiles are only used for `on-target-tests` compilation
[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
