[workspace]
resolver = "2"
members = ["rp2040-hal", "rp2040-hal-macros", "on-target-tests"]
exclude = []

[patch.'https://github.com/rp-rs/rp-hal.git']
rp2040-hal = { path = "./rp2040-hal" }

[patch.crates-io]
rp2040-hal = { path = "./rp2040-hal" }
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac/", rev = "615f600538a13f750438dafe07014ffad0cad51f" }

# Those profiles are only used for `on-target-tests` compilation
[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
