[workspace]
resolver = "2"
members = ["rp2040-hal", "rp2040-hal-macros", "on-target-tests", "rp-binary-info"]
exclude = []

[patch.'https://github.com/rp-rs/rp-hal.git']
rp2040-hal = { path = "./rp2040-hal" }

[patch.crates-io]
rp2040-hal = { path = "./rp2040-hal" }

# Those profiles are only used for `on-target-tests` compilation
[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
