[package]
edition = "2021"
name = "on-target-tests"
version = "0.1.0"
publish = false

[[test]]
name = "dma_m2m_u8"
harness = false

[[test]]
name = "dma_m2m_u16"
harness = false

[[test]]
name = "dma_m2m_u32"
harness = false

[[test]]
name = "dma_spi_loopback_u8"
harness = false

[[test]]
name = "dma_spi_loopback_u16"
harness = false

[[test]]
name = "dma_dyn"
harness = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-hal = { path = "../rp2040-hal", features = [
    "defmt",
    "critical-section-impl",
] }
# Needed to set spi frequencies
fugit = "0.3.6"

rp2040-boot2 = "0.3.0"
critical-section = "1.0.0"
