[package]
authors = ["The rp-rs Developers"]
description = "Test cases that run on an RP2040"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "on-target-tests"
publish = false
readme = "README.md"
repository = "https://github.com/rp-rs/rp-hal"
version = "0.1.0"

[[test]]
harness = false
name = "dma_m2m_u8"

[[test]]
harness = false
name = "dma_m2m_u16"

[[test]]
harness = false
name = "dma_m2m_u32"

[[test]]
harness = false
name = "dma_spi_loopback_u8"

[[test]]
harness = false
name = "dma_spi_loopback_u16"

[[test]]
harness = false
name = "dma_dyn"

[[test]]
harness = false
name = "i2c_loopback"

[[test]]
harness = false
name = "i2c_loopback_async"

[[test]]
harness = false
name = "gpio"

[[test]]
harness = false
name = "multicore"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-test = "0.3.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
fugit = "0.3.6"
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
heapless = {version = "0.8.0", features = ["portable-atomic-critical-section", "defmt-03"]}
i2c-write-iter = {version = "1.0.0", features = ["async"]}
itertools = {version = "0.12.0", default-features = false}
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }
panic-probe = {version = "0.3", features = ["print-defmt"]}
rp2040-boot2 = { version = "0.3.0", optional = true }
rp2040-hal = {path = "../rp2040-hal", features = ["critical-section-impl", "defmt", "rt", "i2c-write-iter"], optional = true}
rp235x-hal = {path = "../rp235x-hal", features = ["critical-section-impl", "defmt", "rt", "i2c-write-iter"], optional = true}
portable-atomic = {version = "1.7.0", features = ["critical-section"]}

[features]

rp2040 = ["dep:rp2040-boot2", "dep:rp2040-hal"]
rp235x = ["dep:rp235x-hal"]

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
