[package]
name = "rp-binary-info"
version = "0.1.1"
edition = "2021"
authors = ["The rp-rs Developers"]
homepage = "https://github.com/rp-rs/rp-hal"
description = "Code and types for creating Picotool compatible Binary Info metadata"
license = "MIT OR Apache-2.0"
rust-version = "1.79"
repository = "https://github.com/rp-rs/rp-hal"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
keywords = ["embedded", "raspberry-pi", "rp2040", "rp2350", "picotool"]

[features]
binary-info = []

[dependencies]
