[package]
authors = ["The rp-rs Developers"]
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
description = "Examples for the rp2040-hal crate"
edition = "2021"
homepage = "https://github.com/rp-rs/rp-hal"
keywords = ["embedded", "hal", "raspberry-pi", "rp2040", "embedded-hal"]
license = "MIT OR Apache-2.0"
name = "rp2040-hal-examples"
repository = "https://github.com/rp-rs/rp-hal"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.0"
dht-sensor = {version = "0.2.1", git = "https://github.com/michaelbeaumont/dht-sensor", rev = "10319bdeae9ace3bb0fc79a15da2869c5bf50f52"}
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = {version = "0.3.0", features = ["defmt-03"]}
embedded-io = "0.7.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
fugit = "0.3.6"
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
hd44780-driver = {version = "0.4.0", git = "https://github.com/JohnDoneth/hd44780-driver", rev = "9009f2c24771ba0a20f8f7534471c9869188f76c"}
nb = "1.0"
panic-halt = "0.2.0"
panic-probe = {version = "0.3.1", features = ["print-defmt"]}
pio = "0.3.0"
# We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
# Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
portable-atomic = {version = "1.7.0", features = ["critical-section"]}
rp2040-boot2 = "0.3.0"
rp2040-hal = {path = "../rp2040-hal", version = "0.11.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
# The examples use features not yet available in rp-binary-info 0.1.0,
# so the minimum version implied by the rp2040-hal 0.11.0 dependency is not sufficient.
rp-binary-info = {path = "../rp-binary-info", version ="0.1.2"}
static_cell = "2.1.0"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[lints.clippy]
too_long_first_doc_paragraph = "allow"
