[package]
authors = ["The rp-rs Developers"]
description = "Macros used by rp2040-hal"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rp2040-hal-macros"
readme = "README.md"
repository = "https://github.com/rp-rs/rp-hal"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full"]}
