[package]
description = "Macros used by rp235x-hal"
license = "MIT OR Apache-2.0"
name = "rp235x-hal-macros"
readme = "README.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rp-rs/rp-hal"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["full"]
version = "2.0"

